--- a/QuantifyThisAndroid/res/layout/fragment_mark_mood.xml
+++ b/QuantifyThisAndroid/res/layout/fragment_mark_mood.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/RelativeLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     android:orientation="vertical" >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="vertical" >
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
         android:gravity="center_horizontal"
         android:text="@string/mood_label_1"
         android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -18,24 +23,18 @@
     <SeekBar
         android:id="@+id/seekBar1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1" />
+        android:layout_height="wrap_content"/>
      <TextView
             android:id="@+id/seekbar1_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0%"
-            android:layout_below="@id/seekBar1"
-             android:layout_centerHorizontal="true"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/seekbar1_label"
         android:gravity="center_horizontal"
         android:text="@string/mood_label_2"
         android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -44,24 +43,18 @@
     <SeekBar
         android:id="@+id/seekBar2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView2" />
+        android:layout_height="wrap_content" />
     <TextView
             android:id="@+id/seekbar2_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0%"
-            android:layout_below="@id/seekBar2"
-             android:layout_centerHorizontal="true"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/seekbar2_label"
         android:gravity="center_horizontal"
         android:text="@string/mood_label_3"
         android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -69,24 +62,18 @@
     <SeekBar
         android:id="@+id/seekBar3"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView3" />
+        android:layout_height="wrap_content"/>
     <TextView
             android:id="@+id/seekbar3_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0%"
-            android:layout_below="@id/seekBar3"
-             android:layout_centerHorizontal="true"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/seekbar3_label"
         android:gravity="center_horizontal"
         android:text="@string/mood_label_4"
         android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -94,24 +81,18 @@
     <SeekBar
         android:id="@+id/seekBar4"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView4" />
+        android:layout_height="wrap_content" />
     <TextView
             android:id="@+id/seekbar4_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0%"
-            android:layout_below="@id/seekBar4"
-             android:layout_centerHorizontal="true"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/seekbar4_label"
         android:gravity="center_horizontal"
         android:text="@string/mood_label_5"
         android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -119,25 +100,28 @@
     <SeekBar
         android:id="@+id/seekBar5"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView5" />
+        android:layout_height="wrap_content" />
     <TextView
             android:id="@+id/seekbar5_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0%"
-            android:layout_below="@id/seekBar5"
-            android:layout_centerHorizontal="true"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="@dimen/margin_bottom_mark_button"
-        android:text="@string/button_mark_mood_label" />
+        android:gravity="center"
+        android:orientation="vertical" >
 
-</RelativeLayout>
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/margin_bottom_mark_button"
+            android:text="@string/button_mark_mood_label" />
+
+    </LinearLayout>
+
+</LinearLayout>
