--- a/iOS/QuantifyThis/QuantifyThis/en.lproj/MainStoryboard.storyboard
+++ b/iOS/QuantifyThis/QuantifyThis/en.lproj/MainStoryboard.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2840" systemVersion="11G56" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="otX-Ai-poU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="otX-Ai-poU">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1926"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
     </dependencies>
     <scenes>
         <!--Heart Beat Controller - Heart Rate-->
@@ -535,10 +535,13 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Login In" id="c5F-46-rHe"/>
+                    <connections>
+                        <outlet property="webView" destination="HKy-mj-mGR" id="jz2-js-JY8"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NFj-58-0qa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2694" y="1399"/>
+            <point key="canvasLocation" x="-2694" y="1410"/>
         </scene>
         <!--View Controller - Calendar view-->
         <scene sceneID="q39-BN-PEU">
@@ -699,6 +702,12 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/IASKAppSettingsViewController.h"/>
             <relationships>
                 <relationship kind="outlet" name="delegate"/>
+            </relationships>
+        </class>
+        <class className="LoginViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/LoginViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
             </relationships>
         </class>
         <class className="NSLayoutConstraint" superclassName="NSObject">
