--- a/HTML5/css/style.css
+++ b/HTML5/css/style.css
@@ -25,6 +25,11 @@ body{
 	min-width:350px;
 	text-align:center;
 }
+.ui-footer{
+	position:absolute !important;
+	bottom:0;
+	width:100%;
+}
 .buttonbar{
 	margin-top:20px;
 }
@@ -38,8 +43,6 @@ body{
 	cursor:pointer;
 }
 .important{
-
-
 	text-align:center;
 
 	-webkit-border-radius: 5px;
@@ -61,9 +64,9 @@ body{
 .notify{
 	text-align:center;
 
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
 	padding:5px;
 	border: 1px solid #bbb;
 	margin:5px;
