--- a/QuantifyThisAndroid/res/layout/fragment_hint.xml
+++ b/QuantifyThisAndroid/res/layout/fragment_hint.xml
@@ -7,7 +7,9 @@
     <ListView
         android:id="@+id/list_hint"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:paddingLeft="10dp" >
+
     </ListView>
 
 </LinearLayout>
