--- a/QuantifyThisAndroid/res/layout/fragment_home.xml
+++ b/QuantifyThisAndroid/res/layout/fragment_home.xml
@@ -1,54 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:orientation="horizontal" >
-
-        <Button
-            android:id="@+id/button_launch_mark"
+        <TableRow
+            android:id="@+id/tableRow3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="launchActivity"
-            android:text="@string/button_mark_mood_label" />
+            android:layout_gravity="center_horizontal"
+            android:padding="5dip" >
 
-        <Button
-            android:id="@+id/button_launch_agenda"
+            <Button
+                android:id="@+id/button_launch_mark"
+                android:drawableLeft="@drawable/m"
+                android:gravity="left|center_vertical"
+                android:onClick="launchActivity"
+                android:text="@string/button_mark_mood_label" />
+
+            <Button
+                android:id="@+id/button_launch_agenda"
+                android:drawableLeft="@drawable/c"
+                android:gravity="left|center_vertical"
+                android:onClick="launchActivity"
+                android:text="@string/button_agenda_mood_label" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/tableRow4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="launchActivity"
-            android:text="@string/button_agenda_mood_label" />
-    </LinearLayout>
+            android:layout_gravity="center_horizontal"
+            android:padding="5dip" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center" >
+            <Button
+                android:id="@+id/button_launch_statistics"
+                android:drawableLeft="@drawable/st"
+                android:gravity="left|center_vertical"
+                android:minWidth="40dp"
+                android:onClick="launchActivity"
+                android:text="@string/button_statistics_label" />
 
-        <Button
-            android:id="@+id/button_launch_statistics"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="launchActivity"
-            android:layout_weight="1"
-            android:text="@string/button_statistics_label" />
+            <Button
+                android:id="@+id/button_launch_settings"
+                   
+                android:drawableLeft="@drawable/se"
+                android:gravity="left|center_vertical"
+                android:onClick="launchActivity"
+                android:text="@string/button_settings_label" />
+        </TableRow>
+    </TableLayout>
 
-        <Button
-            android:id="@+id/button_launch_settings"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="launchActivity"
-            android:layout_weight="1"
-            android:text="@string/button_settings_label" />
-    </LinearLayout>
-
-</LinearLayout>
