--- a/QuantifyThisAndroid/res/layout/fragment_statistics.xml
+++ b/QuantifyThisAndroid/res/layout/fragment_statistics.xml
@@ -4,12 +4,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="@string/label_statistics"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+ <be.mume.quantifythis.model.MultitouchPlot
+    	android:id="@+id/multitouchPlot"
+    	android:layout_width="fill_parent"
+    	android:layout_height="fill_parent"
+    	android:layout_marginTop="10dp"
+    	android:layout_marginLeft="10dp"
+    	android:layout_marginRight="10dp"
+    	title="Quantify This Statistics"/>
 
 </LinearLayout>
